# miner

./: README.md  pyproject.toml
sixgpt_miner/: constants.py  drive.py  run.py
